--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,3 +3,95 @@
 @import "mq";
 @import "general";
 @import "share";
+
+.interactive-container {
+	.gridItem {
+		width:50px;
+		height:50px;
+		display: inline-block;
+		margin-right:5px;
+		background-color:grey;
+	}
+
+	.header {
+		background-image: url('assets/imgs/nauru-etch-outline.png');
+	    background-repeat: no-repeat;
+	    background-position: right bottom;
+	    background-size:60%;
+	    height:500px;
+	}
+
+	.nauruHeader {
+		float: left;
+		margin-top: 2em;
+		margin-left:2em;
+		font-weight:600;
+		width: 40%;
+	}
+
+	.headerSmall {
+		color:#E31F26;
+		font-size:2rem;
+	}
+
+	.subHeading { 
+		border-bottom:dotted 1px #FFF;
+		padding-bottom:5px;
+		margin-bottom:10px;
+		font-size:1.5rem;
+		font-weight:400;
+	}
+
+	.standfirst {
+		font-size:1rem;
+		font-weight:400;
+		line-height:1.1rem;
+		margin-bottom:10px;
+	}
+
+	.headerBig {
+		font-size:4rem;
+	}
+
+	.byline a {
+		color:#B41700;
+	}
+
+	.byline {
+		margin-bottom: 10px;
+	}
+
+	color:#FFF;
+
+	.btns-share .btn-tt {
+    background: #bdbdbd url('assets/imgs/twitterIcon.svg') no-repeat center center;
+  }
+  .btns-share .btn-tt:hover {
+    background-color: #03b3ee;
+  }
+
+  .btns-share .btn-fb {
+      background: #bdbdbd url('assets/imgs/facebookIcon.svg') no-repeat center center;
+  }
+
+  .btns-share .btn-fb:hover {
+      background-color: #3067a3;
+  }
+  .btns-share button {
+      color: #fff;
+      width: 32px;
+      height: 32px;
+      border: none;
+      border-radius: 9000px;
+      display: inline-block;
+      vertical-align: top;
+      cursor: pointer;
+      outline: none;
+      -webkit-appearance: button;
+      text-transform: none;
+      overflow: visible;
+      -webkit-font-smoothing: antialiased;
+      margin: 0;
+  }
+}
+
