--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -20,6 +20,7 @@
   margin: 0 auto;
   display: inline-block;
   max-width: 600px;
+  z-index: 100;
   max-height: 100%;
   overflow-y: auto;
   text-align: left;
