--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -37,6 +37,28 @@
   cursor: pointer;
 }
 
+.share-twitter{
+  padding: 5px 15px;
+  margin-top: 10px;
+  cursor: pointer;
+  display: inline-block;
+  transition: background-color .4s,color .4s;
+  border-radius: 25px;
+  line-height: 1.4;
+  border: none;
+  background-color: #767676;
+  font-family: 'Guardian Agate Sans 1 Web';
+  text-decoration: none;
+  color: #fff;
+  outline: 0;
+
+  &:hover {
+    color: #fff;
+    background-color: #333;
+    text-decoration: none;
+  };
+}
+
 .modal-header {
   background-color: #333;
   color: #fff;
