--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,13 +5,14 @@
 @import "share";
 @import "tooltip";
 @import "modal";
-@import '../../jspm_packages/npm/aos@1.2.1/src/sass/aos.scss';
-@import '../../jspm_packages/npm/aos@1.2.1/src/sass/_easing.scss';
+@import "aos";
+@import '../../jspm_packages/npm/aos@1.2.2/src/sass/aos.scss';
+@import '../../jspm_packages/npm/aos@1.2.2/src/sass/_easing.scss';
 
 .interactive-container {
   position: relative;
   padding: 0;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
 
   &:after {
     content: "";
@@ -30,6 +31,17 @@
     &.show {
       display: block;
     }
+  }
+
+  #hidden_iframe {
+    display: none;
+  }
+  
+  #submit-msg {
+    display: none;
+    margin-top: 1em;
+    font-style: italic;
+    color: #767676;
   }
 
   .interactive-content {
@@ -110,7 +122,7 @@
     .month-bars {
       position: relative;
       width: 100%;
-      height: 100px;
+      height: 120px;
 
       h2 {
         padding: 0;
@@ -122,9 +134,23 @@
       }
       .bar {
         display: block;
-        background-color: #767676;
         position: absolute;
-        bottom: 20px;
+        bottom: 0;
+
+        .fill {
+          background-color: #767676;
+          position: absolute;
+          bottom: 20px;
+          width: 100%;
+        }
+      }
+      .value {
+        position: absolute;
+        font-size: 12px;
+        font-family: "Guardian Agate Sans 1 Web";
+        text-align: center;
+        display: none;
+        width: 100%;
       }
       .tick {
         bottom: 5px;
