--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -37,7 +37,7 @@
   cursor: pointer;
 }
 
-.share-twitter{
+.share-twitter, #report-modal{
   padding: 5px 15px;
   margin-top: 10px;
   cursor: pointer;
