--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -312,6 +312,7 @@
     float: left;
     margin-bottom: 20px;
     position: relative;
+    z-index: 10;
     @include mq($until: tablet) {
       width: 100%;
       float: none;
