update appearance of about button

--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -86,7 +86,7 @@
       background-color: #b51800;
       color: #fff;
     }
-    .rating-Information {
+    .rating-Information, .rating-Unclassified {
       background-color: #ddd;
     }
   }
