update and style form

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,6 +5,7 @@
 @import "share";
 @import "tooltip";
 @import "modal";
+@import "form";
 @import "aos";
 @import '../../jspm_packages/npm/aos@1.2.2/src/sass/aos.scss';
 @import '../../jspm_packages/npm/aos@1.2.2/src/sass/_easing.scss';
