--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -131,7 +131,11 @@
   p {
     line-height: 1.5em;
     padding: 0;
-    margin: 0;
+    margin: 0.75em 0;
+  }
+
+  li {
+    margin: 0.75em 0;
   }
 }
 
