--- a/src/css/_form.scss
+++ b/src/css/_form.scss
@@ -19,7 +19,7 @@
       background-color: #fff;
       font-size: 16px;
       line-height: 24px;
-      font-family: "Guardian Agate Sans 1 Web";
+      font-family:'Guardian Text Sans Web', 'Agate Sans', sans-serif;
       width: 100%;
     }
   }
