--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -126,7 +126,7 @@
 .modal-content {
   background-color: #eaeaea;
   padding: 30px;
-  font-family: 'Guardian Agate Sans 1 Web';
+  font-family:'Guardian Text Sans Web', 'Agate Sans', sans-serif;
 
   p {
     line-height: 1.5em;
