--- a/src/css/_tooltip.scss
+++ b/src/css/_tooltip.scss
@@ -43,7 +43,7 @@
         display: inline-block;
         margin-top: 10px;
         font-size: 11px;
-        font-family: 'Guardian Agate Sans 1 Web';
+        font-family:'Guardian Text Sans Web', 'Agate Sans', sans-serif;
     }
 
     .text {
