--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -174,7 +174,7 @@
           &:first-of-type {
             display: block;
           }
-          &:nth-child(3n + 1) {
+          &:nth-child(3n) {
             display: block;
           };
         } 
@@ -258,6 +258,10 @@
         border-bottom: 1px solid #333;
         font-size: 12px;
         clear: both;
+
+        .categories-col {
+          width: 100%;
+        }
       }
     }
   }
@@ -317,6 +321,7 @@
         top: 0;
         display: block;
         left: 0;
+        color: #333;
         option {
           font-size: 18px;
         }
@@ -490,6 +495,8 @@
       position: absolute;
       transform: skew(0deg,-6deg);
       transform-origin: 85% bottom;
+      -webkit-transform: skew(0deg,-6deg);
+      -webkit-transform-origin: 85% bottom;
       z-index:50;
       top: 0;
 
@@ -523,6 +530,8 @@
       overflow: hidden;
       transform: skew(0deg,8deg) rotate(-1deg);
       transform-origin: 50% bottom;
+      -webkit-transform: skew(0deg,8deg) rotate(-1deg);
+      -webkit-transform-origin: 50% bottom;
       background-color: #e6711b;
     }
 
@@ -534,7 +543,7 @@
 
       .header-text-bg { 
         bottom: -50px; 
-        height: 480px;
+        height: 500px;
       }
       .header-image { 
         top: 60px;        
@@ -608,10 +617,10 @@
 	.standfirst {
 		font-size:1em;
 		font-weight:400;
-		line-height:1.25rem;
+		line-height:1.25em;
 		margin-bottom:10px;
     color: #212121; 
-    max-width: 50em;
+    max-width: 45em;
 	}
   .more-actions {
     right: 0;
